--- a/views/images.mustache
+++ b/views/images.mustache
@@ -3,11 +3,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>show image</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link rel="stylesheet" href="../css/bootstrap.min.css"> 
 </head>
 <body>
-    <div class="container" style="width: 200rem;">
-      <div id="carouselExample" class="carousel slide">
+    <div class="container d-flex align-items-center justify-content-center vh-100">
+      <div id="carouselExample" class="carousel slide w-75">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="coco.jpg" class="d-block w-100" alt="first image">
@@ -29,6 +29,6 @@
       </div>
   </div>
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+ <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
